--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -27,7 +27,7 @@
     <div id="chat-page" class="hidden">
         <div class="chat-container">
             <div class="chat-header">
-                <h2>Hello Copenhagen!!!</h2>
+                <h2>Hello St. Petersburg!!!</h2>
                 <!-- <img src="images/cricket.jpg" width="86" height="86" title="cricket" alt="cricket"> -->
             </div>
             <div class="connecting">
