--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -27,7 +27,7 @@
     <div id="chat-page" class="hidden">
         <div class="chat-container">
             <div class="chat-header">
-                <h2>Hello O'reilly!</h2>
+                <h2>HELLO O'REILLY 2021</h2>
             </div>
             <div class="connecting">
                 Connecting...
